try to fix auto zoom in on mobile?

--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ body {
   text-align: center;
   margin: 0;
   padding-top: 45px; 
+  overflow: none;
 }
 
 /* ---------- Header / Nav (Desktop first) ---------- */
@@ -31,7 +32,7 @@ body {
   z-index: 999;
   width: 100%;
   padding: 10px 16px;
-  overflow: visible;
+  overflow: none;
 }
 
 .header .header-row{
